--- a/example.bib
+++ b/example.bib
@@ -406,7 +406,7 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
   journal = {Phys. Rev. Lett.},
   volume = {85},
   issue = {4},
-  pages = {768--771},
+  pages = {768-771},
   numpages = {0},
   year = {2000},
   month = {Jul},
@@ -1391,19 +1391,6 @@ URL = {https://doi.org/10.1063/1.464521},
     url = {https://www.jstor.org/stable/20053465},
     pages = {1197-1198}
 }
-@ARTICLE{DFP11,
-    author = {Parsons, D. F. and  Bostrom, M. and Nostro, P. L. and Ninham, B. M.},
-    title = {{Hofmeister Effects: Interplay of Hydration, Nonelectrostatic Potentials, and Ion Size}},
-    journal  ="Phys. Chem. Chem. Phys.",
-    year  ="2011",
-    volume  ="13",
-    issue  ="27",
-    pages  ="12352--12367",
-    publisher  ="The Royal Society of Chemistry",
-    doi  ="10.1039/C1CP20538B",
-    url  ="http://dx.doi.org/10.1039/C1CP20538B",
-    abstract  ="The classical Derjaguin–Landau–Verwey–Overbeek (DLVO) theory of colloids{,} and corresponding theories of electrolytes{,} are unable to explain ion specific forces between colloidal particles quantitatively. The same is true generally{,} for surfactant aggregates{,} lipids{,} proteins{,} for zeta and membrane potentials and in adsorption phenomena. Even with fitting parameters the theory is not predictive. The classical theories of interactions begin with continuum solvent electrostatic (double layer) forces. Extensions to include surface hydration are taken care of with concepts like inner and outer Helmholtz planes{,} and “dressed” ion sizes. The opposing quantum mechanical attractive forces (variously termed van der Waals{,} Hamaker{,} Lifshitz{,} dispersion{,} nonelectrostatic forces) are treated separately from electrostatic forces. The ansatz that separates electrostatic and quantum forces can be shown to be thermodynamically inconsistent. Hofmeister or specific ion effects usually show up above ≈10−2 molar salt. Parameters to accommodate these in terms of hydration and ion size had to be invoked{,} specific to each case. Ionic dispersion forces{,} between ions and solvent{,} for ion–ion and ion–surface interactions are not explicit in classical theories that use “effective” potentials. It can be shown that the missing ionic quantum fluctuation forces have a large role to play in specific ion effects{,} and in hydration. In a consistent predictive theory they have to be included at the same level as the nonlinear electrostatic forces that form the skeletal framework of standard theory. This poses a challenge. The challenges go further than academic theory and have implications for the interpretation and meaning of concepts like pH{,} buffers and membrane potentials{,} and for their experimental interpretation. In this article we overview recent quantitative developments in our evolving understanding of the theoretical origins of specific ion{,} or Hofmeister effects. These are demonstrated through an analysis that incorporates nonelectrostatic ion–surface and ion–ion dispersion interactions. This is based on ab initio ionic polarisabilities{,} and finite ion sizes quantified through recent ab initio work. We underline the central role of ionic polarisabilities and of ion size in the nonelectrostatic interactions that involve ions{,} solvent molecules and interfaces. Examples of mechanisms through which they operate are discussed in detail. An ab initio hydration model that accounts for polarisabilities of the tightly held hydration shell of “cosmotropic” ions is introduced. It is shown how Hofmeister effects depend on an interplay between specific surface chemistry{,} surface charge density{,} pH{,} buffer{,} and counterion with polarisabilities and ion size. We also discuss how the most recent theories on surface hydration combined with hydrated nonelectrostatic potentials may predict experimental zeta potentials and hydration forces."
-}
 @ARTICLE{Verreault2013,
     author = {D. Verreault and H. C. Allen},
     title = {{Bridging the Gap between Microscopic and Macroscopic Views of Air/Aqueous Salt Interfaces}},
@@ -2243,15 +2230,18 @@ abstract= {{ An exhaustive kinetic analysis has been carried out to offer the co
     URL = {https://doi.org/10.1021/cr0006876},
     pages = {2693-2724}
 }
-@ARTICLE{LoNostro12,
-    author = {{Lo Nostro}, P. and  Ninham, B. W.},
-    title = {{Hofmeister Phenomena: An Update on Ion Specificity in Biology}},
-    journal = {Chem. Rev.},
-    year = {2012},
-    volume = {112 },
-    pages = {2286-2322},
-    doi = {https://doi.org/10.1021/cr200271j},
-    url = {https://pubs.acs.org/doi/pdf/10.1021/cr200271j}
+@ARTICLE{Parsons2011,
+    author = {Parsons, D. F. and  Bostrom, M. and Nostro, P. L. and Ninham, B. M.},
+    title = {{Hofmeister Effects: Interplay of Hydration, Nonelectrostatic Potentials, and Ion Size}},
+    journal  ="Phys. Chem. Chem. Phys.",
+    year  ="2011",
+    volume  ="13",
+    issue  ="27",
+    pages  ="12352-12367",
+    publisher  ="The Royal Society of Chemistry",
+    doi  ="10.1039/C1CP20538B",
+    url  ="http://dx.doi.org/10.1039/C1CP20538B",
+    abstract  ="The classical Derjaguin–Landau–Verwey–Overbeek (DLVO) theory of colloids{,} and corresponding theories of electrolytes{,} are unable to explain ion specific forces between colloidal particles quantitatively. The same is true generally{,} for surfactant aggregates{,} lipids{,} proteins{,} for zeta and membrane potentials and in adsorption phenomena. Even with fitting parameters the theory is not predictive. The classical theories of interactions begin with continuum solvent electrostatic (double layer) forces. Extensions to include surface hydration are taken care of with concepts like inner and outer Helmholtz planes{,} and “dressed” ion sizes. The opposing quantum mechanical attractive forces (variously termed van der Waals{,} Hamaker{,} Lifshitz{,} dispersion{,} nonelectrostatic forces) are treated separately from electrostatic forces. The ansatz that separates electrostatic and quantum forces can be shown to be thermodynamically inconsistent. Hofmeister or specific ion effects usually show up above ≈10−2 molar salt. Parameters to accommodate these in terms of hydration and ion size had to be invoked{,} specific to each case. Ionic dispersion forces{,} between ions and solvent{,} for ion–ion and ion–surface interactions are not explicit in classical theories that use “effective” potentials. It can be shown that the missing ionic quantum fluctuation forces have a large role to play in specific ion effects{,} and in hydration. In a consistent predictive theory they have to be included at the same level as the nonlinear electrostatic forces that form the skeletal framework of standard theory. This poses a challenge. The challenges go further than academic theory and have implications for the interpretation and meaning of concepts like pH{,} buffers and membrane potentials{,} and for their experimental interpretation. In this article we overview recent quantitative developments in our evolving understanding of the theoretical origins of specific ion{,} or Hofmeister effects. These are demonstrated through an analysis that incorporates nonelectrostatic ion–surface and ion–ion dispersion interactions. This is based on ab initio ionic polarisabilities{,} and finite ion sizes quantified through recent ab initio work. We underline the central role of ionic polarisabilities and of ion size in the nonelectrostatic interactions that involve ions{,} solvent molecules and interfaces. Examples of mechanisms through which they operate are discussed in detail. An ab initio hydration model that accounts for polarisabilities of the tightly held hydration shell of “cosmotropic” ions is introduced. It is shown how Hofmeister effects depend on an interplay between specific surface chemistry{,} surface charge density{,} pH{,} buffer{,} and counterion with polarisabilities and ion size. We also discuss how the most recent theories on surface hydration combined with hydrated nonelectrostatic potentials may predict experimental zeta potentials and hydration forces."
 }
 @article{LYH83,
     author = "L.-Y. Hsu and C. E. Nordman",
@@ -2994,16 +2984,6 @@ year="2008",
 publisher="",
 volume="319",
 pages="1197-1198 ",
-url=""
-}
-@Article{Parsons11,
-author="Parsons, D. F. and Bostrom, M. and Lo Nostro, P. and Ninham, B. W.",
-title="Hofmeister Effects: Interplay of Hydration, Nonelectrostatic Potentials, and Ion Size",
-journal="Phys. Chem. Chem. Phys. ",
-year="2011",
-publisher="",
-volume="13",
-pages="12352-12367 ",
 url=""
 }
 @Article{allen09,
@@ -3802,7 +3782,7 @@ number={2},
 pages = {027401},
 abstract= {{We present the first infrared photon echo study of liquid water. For the O-H stretch vibration of HDO in D2O, fs FWM expriments reveal an extraordinary short pure dephasing time T2* on the order of 90 fs. This unusually fast time scale of dephasing is rationalized by taking into account the large anharmonicity of the hydrogen bonded O-H strtching mode. }}
 }
-@ARTICLE{Jimenez94,
+@ARTICLE{Jimenez1994,
 author = {R. Jimenez and G. R. Fleming and P. V. Kumar and M. Maroncelli},
 title = {{Femtosecond Solvation Dynamics of Water}},
 journal = {Nature},
@@ -3810,10 +3790,20 @@ doi ={https://doi.org/10.1038/369471a0},
 year = {1994},
 volume = {369},
 pages = {471-473},
-abstract= {{The timescale of the response of solvent molecules to electronic rearrangement of solute molecules has a critical influence on the rates of chemical reactions in liquids1–10. In particular, if the solvent cannot adapt quickly enough to this rearrangement as the reactants pass through the transition state, the evolving products may recross the free-energy barrier, reducing the reaction rate. Computer simulations have shown11–18 that the response of a solvent to a change in solute charge distribution is strongly bimodal: there is an initial ultrafast response owing to inertial (mainly libra-tional) motions of the solvent molecules, followed by a slow component owing to diffusive motions. Water seems to be by far the 'fastest' solvent studied so far: simulations predict that well over half of the solvation response for atomic solutes is inertial, happening on a timescale of about 20 femtoseconds12,13. The presence of this ultrafast component implies that solvent friction plays an important role in many aqueous charge-transfer processes9,10,19–21. Experimental verification of this prediction has been lacking, however, in part because of the difficulty of obtaining sufficient time resolution. Here we present experimental measurements of the ultrafast solvation dynamics of a coumarin salt in water. When considered in conjunction with computer simulations, our results demonstrate that a solvent response on a timescale faster than 50 fs can dominate aqueous solvation dynamics.
+abstract= {{The timescale of the response of solvent molecules to electronic rearrangement of 
+solute molecules has a critical influence on the rates of chemical reactions in liquids. 
+In particular, if the solvent cannot adapt quickly enough to this rearrangement as the 
+reactants pass through the transition state, the evolving products may recross the free-energy barrier, 
+reducing the reaction rate. Computer simulations have shown that the response of a solvent 
+to a change in solute charge distribution is strongly bimodal: there is an initial ultrafast response
+ owing to inertial (mainly libra-tional) motions of the solvent molecules, followed by a slow component owing to diffusive motions. Water seems to be by far the 'fastest' solvent studied so far: simulations predict that well over half of the solvation response for atomic solutes is inertial, 
+happening on a timescale of about 20 femtoseconds. The presence of this ultrafast component implies that solvent friction plays
+ an important role in many aqueous charge-transfer processes. Experimental verification of this prediction has been lacking, however, 
+in part because of the difficulty of obtaining sufficient time resolution. Here we present experimental measurements of the ultrafast solvation dynamics of a coumarin salt in water.
+When considered in conjunction with computer simulations, our results demonstrate that a solvent response on a timescale faster than 50 fs can dominate aqueous solvation dynamics.
 }}
 }
-@ARTICLE{Tarek02,
+@ARTICLE{Tarek2002,
 author = {M. Tarek and D. J. Tobias},
 title = {{Role of Protein-Water Hydrogen Bond Dynamics in the Protein Dynamical Transition}},
 journal = {Phys. Rev. Lett.},
@@ -5444,14 +5434,7 @@ pages = "123-153"
     volume = {319},
     pages = {1197-1198}
 }
-@ARTICLE{DFP11,
-    author = {D. F. Parsons and M. Bostrom and P. Lo Nostro and B. M. Ninham},
-    title = {{Hofmeister Effects: Intensity of Hydration, Nonelectrostatic Potentials, and Ion Size}},
-    journal = {Phys. Chem. Chem. Phys.},
-    year = {2011},
-    volume = {13},
-    pages = {12352-12367}
-}
+%DFP11,Parsons11
 @ARTICLE{Verreault2013,
     author = {D. Verreault and H. C. Allen},
     title = {{Bridging the Gap between Microscopic and Macroscopic Views of Air/Aqueous Salt Interfaces}},
@@ -6697,16 +6680,6 @@ year="2008",
 publisher="",
 volume="319",
 pages="1197-1198 ",
-url=""
-}
-@Article{Parsons11,
-author="Parsons, D. F. and Bostrom, M. and Lo Nostro, P. and Ninham, B. W.",
-title="Hofmeister Effects: Interplay of Hydration, Nonelectrostatic Potentials, and Ion Size",
-journal="Phys. Chem. Chem. Phys. ",
-year="2011",
-publisher="",
-volume="13",
-pages="12352-12367 ",
 url=""
 }
 @Article{allen09,
@@ -8168,25 +8141,15 @@ volume="319",
 pages="1197-1198",
 url=""
 }
-@Article{Parsons11,
-author={Parsons, D. F. and Bostrom, M. and Lo Nostro, P. and Ninham, B. W.},
-title={Hofmeister Effects: Interplay of Hydration, Nonelectrostatic Potentials, and Ion Size},
-journal={Phys. Chem. Chem. Phys.},
-year={2011},
-publisher="",
-volume="13",
-pages="12352-12367 ",
-url=""
-}
-@Article{LoNostro2012,
-author={Lo Nostro, P. and Ninham, B.},
-title={Hofmeister Phenomena: An Update on Ion Specificity in Biology},
-journal={Chem. Rev.},
-year={2012},
-publisher="",
-volume="112",
-pages="2286-2322",
-url=""
+@ARTICLE{LoNostro2012,
+    author = {{Lo Nostro}, P. and  Ninham, B. W.},
+    title = {{Hofmeister Phenomena: An Update on Ion Specificity in Biology}},
+    journal = {Chem. Rev.},
+    year = {2012},
+    volume = {112},
+    pages = {2286-2322},
+    doi = {https://doi.org/10.1021/cr200271j},
+    url = {https://pubs.acs.org/doi/pdf/10.1021/cr200271j}
 }
 @ARTICLE{Jungwirth2014,
 author ={Pavel Jungwirth and Paul S. Cremer},
@@ -8550,23 +8513,6 @@ doi = {10.1016/j.cocis.2004.05.028},
 abstract ={},
 URL = {https://www.sciencedirect.com/science/article/pii/S1359029404000330},
 journal = {Current Opinion in Colloid \& Interface Science} 
-}
-@ARTICLE{Chandra2000,
-    author = {Chandra, Amalendu}, 
-    title = {{Effects of Ions Atmosphere on Hydrogen-Bond Dynamics in Aqueous Electrolyte Solutions}},
-    journal = {Phys. Rev. Lett.},
-    year = {2000},
-    volume = {85},
-    number = {4},
-    pages = {768-771},
-    doi = "",
-    url = " ",
-    abstract = {{We have performed a series of molecular dynamics simulations of aqueous NaCl and KCl solutions
-        at different concentrations to investigate the effects of ion atmosphere on the dynamics of water-water
-        hydrogen bonds at room temperature. The average number of hydrogen bonds per water molecule
-        decreases with increase of ion concentration. The dynamics of hydrogen-bond breaking is found 
-        to accelerate somewhat and that of hydrogen-bond structural relaxation, which occurs at a longer time scale,
-        is found to slow down with increasing ion concentration for both NaCl and KCl solutions.}}
 }
 @ARTICLE{FuHB15,
 title = "Photosensitized Production of Atmospherically Reactive Organic Compounds at the Air/Aqueous Interface",
@@ -9052,6 +8998,34 @@ doi = {https://doi.org/10.1016/j.cocis.2004.05.028},
 url = {https://www.sciencedirect.com/science/article/pii/S1359029404000330},
 keywords = {Propensity, Soft ions, Air/water interface},
 abstract = {Major recent advances: Results of molecular dynamics simulations with polarizable force fields, supported by surface sensitive experiments, indicate that the propensity of atomic and hydrophilic molecular ions for the air/water interface exhibits strong ion specificity. While hard, non-polarizable ions are repelled from the interface, soft, polarizable ions exhibit surface affinity.}
+}
+@article{Townsend1985,
+author = {Townsend,R. Michael  and Gryko,Jan  and Rice,Stuart A. },
+title = {Structure of the Liquid–Vapor Interface of Water},
+journal = {J. Chem. Phys.},
+volume = {82},
+number = {9},
+pages = {4391-4392},
+year = {1985},
+doi = {10.1063/1.448808},
+URL = { 
+        https://doi.org/10.1063/1.448808
+}
+}
+@ARTICLE{Taylor1996,
+author = {Taylor, Ramona S. and Dang, Liem X. and Garrett, Bruce C.},
+title = {{Molecular Dynamics Simulations of the Liquid/Vapor Interface of SPC/E Water}},
+journal = {J. Phys. Chem.},
+year = {1996},
+volume = {100},
+number ={},
+pages = {11720-11725},
+abstract= {{ MD simulations have been used to explore the structural and dynamical properties
+of water’s liquid/vapor interface using the simple extended point charge (SPC/E) model. Comparisons to the
+existing experimental and simulation data suggest that the SPC/E potential energy function provides a
+semiquantitative description of this interface. The orientation of H2O molecules at the interface is found to
+be bimodal in nature. The self-diffusion constant of water is calculated to be larger at the surface than in the
+bulk.}}
 }
 @ARTICLE{,
 author = {},
