--- a/main.tex
+++ b/main.tex
@@ -339,7 +339,7 @@ Realistic models of the interface are required to address the perturbation of th
 
 %
 From the results of nonlinear susceptibilities, I conclude that these water molecules at the interfaces of LiI, NaI, and KI solutions are participating
-in weaker H-bonds, compared with those at the pure water surface.
+in weaker H-bonds, compared with those at the water/vapor interface.
 The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
 
@@ -351,7 +351,7 @@ To analyze the HB dynamics on the interface,
 I proposed a new statistical scheme which is based on the interfacial HB population for the instantaneous interface.
 With the help of the HB population operator, one do not need to sample the molecules who are within the instantaneous interface, 
 i.e., no need to identify the molecules on the interface and calculate the statistical average for the interesting physical quantities. 
-Combining this method with molecule sampling on the interface, we can get more realistic and accurate HB dynamics for the air-water interface.
+Combining this method with molecule sampling on the interface, we can get more realistic and accurate HB dynamics for the water/vapor interface.
 The basic idea of this method is also applied to general interface systems, such as the solvation shells of ions in aqueous solutions.
 %
 The difference between the HB dynamics outside the first shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
@@ -391,19 +391,22 @@ I thank Prof. Dr. Harvey Meyer at the institute for nuclear physics.
 I feel very honored to be a teaching assistant in his quantum field theory course. I have benefited a lot from his wonderful teaching methods, exercises, and questions and answers with students in his class.
 
 %
-I am grateful to Dr. R\'emi Khatib for programing skills and helpful guidance on
-the programs for calculating the VSFG spectra. I also thank Dr. Shuanhu Qi, Dr. Jiajia Zhou and Dr. Fei Yu for useful discussions 
+I am grateful to R\'emi Khatib for programing skills and helpful guidance on
+the programs for calculating the VSFG spectra. I also thank Shuanhu Qi, Jiajia Zhou and Fei Yu for useful discussions 
 on the the calculation of response functions. I would like to
 thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their encouragement and assistance.
 
 %
+I thank Astrid Chase and Daniela Reibel for their enthusiastic and patient help during my stay at the University of Mainz. Thanks to Andreas Nussbaumer  for providing technical support so that I can carry out the calculation smoothly.
+
+%
 I thank Prof. Honggang Luo, Prof. Haiping Fang and Prof. Haijun Zhou for their great help in my study during my doctoral studies. 
-The cooperation and discussions with Dr. Guosheng Shi, Dr. Junming Shao, Dr. Bo Zhou and Dr. Chunlei Wang have benefited me a lot. 
+The cooperation and discussions with Guosheng Shi, Junming Shao, Bo Zhou and Chunlei Wang have benefited me a lot. 
 I express my sincere thanks to them.
 
 %
-I thank Prof. Dr. Yuliang Jin for his support, trust and teachings over the past year.
+I thank Prof. Yuliang Jin for his support, trust and teachings over the past year.
 
 %
 I am grateful to my parents Yuhua Diao and Dehuai Huang, and my brother Jialiang, for their care, 
@@ -514,6 +517,7 @@ ${\phi}$ & electric potential & \\
 ${\bf E}$ & electric field strength &  \\
 $n({\bf r})$ & electron density & \\
 $H_\text{e}$ & electronic many-body Hamiltonian & \\
+$E_\text{I}({\bf R})$ & energy of the nuclei & \\
 $V({\bf r})$ & external potential & \\
 $V_{\text{ee}}$ & electron-electron repulsion energy & \\
 $T[n]$ & electronic kinetic energy & \\
