--- a/example.bib
+++ b/example.bib
@@ -9027,6 +9027,75 @@ semiquantitative description of this interface. The orientation of H2O molecules
 be bimodal in nature. The self-diffusion constant of water is calculated to be larger at the surface than in the
 bulk.}}
 }
+@article{Yagasaki2009,
+author = {Yagasaki,Takuma  and Ono,Junichi  and Saito,Shinji },
+title = {Ultrafast energy relaxation and anisotropy decay of the librational motion in liquid water: A molecular dynamics study},
+journal = {J. Chem. Phys.},
+volume = {131},
+number = {16},
+pages = {164511},
+year = {2009},
+doi = {10.1063/1.3254518},
+URL = { 
+        https://doi.org/10.1063/1.3254518
+},
+eprint = { 
+        https://doi.org/10.1063/1.3254518   
+}}
+@article{Rezus2006,
+author = {Rezus,Y. L. A.  and Bakker,H. J. },
+title = {Orientational dynamics of isotopically diluted H2O and D2O},
+journal = {The Journal of Chemical Physics},
+volume = {125},
+number = {14},
+pages = {144512},
+year = {2006},
+doi = {10.1063/1.2353831},
+URL = {https://doi.org/10.1063/1.2353831    
+}}
+@article{Szabo1984,
+author = {Szabo,Attila },
+title = {Theory of fluorescence depolarization in macromolecules and membranes},
+journal = {The Journal of Chemical Physics},
+volume = {81},
+number = {1},
+pages = {150-167},
+year = {1984},
+doi = {10.1063/1.447378},
+URL = { 
+        https://doi.org/10.1063/1.447378}}
+@article{Tokmakoff1996,
+author = {Tokmakoff,A. },
+title = {Orientational correlation functions and polarization selectivity for nonlinear spectroscopy of isotropic media. I. Third order},
+journal = {The Journal of Chemical Physics},
+volume = {105},
+number = {1},
+pages = {1-12},
+year = {1996},
+doi = {10.1063/1.471856},
+URL = { 
+        https://doi.org/10.1063/1.471856   
+}}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
 @ARTICLE{,
 author = {},
 title = {{}},
