--- a/main.tex
+++ b/main.tex
@@ -169,6 +169,8 @@ headsepline, % Uncomment to get a line under the header
 \newcommand{\CSHB}{$C^\text{(s)}_{\text{HB}}(t)$\xspace}
 \newcommand{\SSHB}{$S^\text{(s)}_{\text{HB}}(t)$\xspace}
 \newcommand{\LiFourW}{[Li$\cdot$(H$_2$O)$_4$]$^+$}
+\newcommand{\rI}{$r_{\text{I}^-}$}
+\newcommand{\rcation}{$r_\text{cation}$}
 %Renew the \AA command in order to have a space when we want
 \let\oldAA\AA
 \renewcommand{\AA}{\oldAA\xspace}
@@ -317,17 +319,19 @@ I have analyzed the interfacial structure and dynamics of solutions containing a
 Molecular Dynamics (DFTMD) simulations. In particular I have presented a detailed analysis of the Hydrogen Bond (HB) structure at the interface and 
 have calculated the interface vibrational spectra in order to provide a molecular interpretation of available experimental data.
 %
-When calculating the SFG spectrum, I used a new approximation method. This method ignores the NR part of the spectrum and finally obtains the interface's nonlinear polarizability to infrared incident light through the velocity correlation function. 
-Based on the calculation of MLWF, the parameterization of the spatial gradient of the components of dipole moment 
+When calculating the Vibrational Sum-Frequency Generation (VSFG) spectrum, I used a new approximation method. 
+This method ignores the NR part of the spectrum and finally obtains the interface's nonlinear polarizability to 
+infrared incident light through the velocity Auto-Correlation Function (ACF). 
+Based on the calculation of Maximally-Localized Wannier Functions (MLWFs), the parameterization of the spatial gradient of the components of dipole moment 
 and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
-transformed into the calculation of the velocity correlation function.
+transformed into the calculation of the velocity ACF.
 The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental 
 Phase Sensitive Sum-Frequency Generation (PS-SFG) spectrum result.
 
 As a first system I have analyzed the behaviour of a salty interface containing LiNO$_3$.
-Both the measured and calculated Vibrational Sum-Frequency Generation (VSFG) spectra shows a reduced intensity of the lower frequency portion region,
+Both the measured and calculated VSFG spectra shows a reduced intensity of the lower frequency portion region,
 when compared to the water/vapor interface.
-This reduction is attributed to the H-bonds established between the \nitrate and the surrounding water molecules at the interface.
+This reduction is attributed to the Hydrogen (H-) bonds established between the \nitrate and the surrounding water molecules at the interface.
 This effects is only related to the presence of \nitrate at the water surface and is not affected by the presence of alkali metal ions.
 %I have shown that although the \Li can reside relative close to the water surface, also forming a water mediated
 %ion pair with \nit, its effect on the VSFG spectrum is not visible. The water molecule which mediate the interaction
@@ -335,7 +339,7 @@ This effects is only related to the presence of \nitrate at the water surface an
 %neither in the VSFG spectra.
 I have shown that the use of simple models, such as small cluster is not suitable to reproduce the experimental spectra 
 and cannot provide a microscopic interpretation of the spectra.
-Realistic models of the interface are required to address the perturbation of the ion on the water surface.
+Realistic models of the interface are required to address the perturbation of the ion at the water surface.
 
 %
 From the results of nonlinear susceptibilities, I conclude that these water molecules at the interfaces of LiI, NaI, and KI solutions are participating
@@ -347,22 +351,22 @@ which form a double layer over the thickness on the order of 5--10 \A.
 %
 For the bulk and interfacial systems, I calculated the correlation functions of the HB population, 
 and obtained the reaction rate constants with the HB formation and breakage. 
-To analyze the HB dynamics on the interface, 
+To analyze the HB dynamics at the water/vapor interface, 
 I proposed a new statistical scheme which is based on the interfacial HB population for the instantaneous interface.
 With the help of the HB population operator, one do not need to sample the molecules who are within the instantaneous interface, 
 i.e., no need to identify the molecules on the interface and calculate the statistical average for the interesting physical quantities. 
 Combining this method with molecule sampling on the interface, we can get more realistic and accurate HB dynamics for the water/vapor interface.
 The basic idea of this method is also applied to general interface systems, such as the solvation shells of ions in aqueous solutions.
 %
-The difference between the HB dynamics outside the first shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
+The difference between the HB dynamics outside the first solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
 %They reflect the difference between HB dynamics in bulk water and that at the water/vapor interfaces.
 For the interface of alkaline iodine solutions, I also find that the cations does not alter the H-bonding network 
 outside the first hydration shell of the cations themselves.
 %It is concluded that no long-range structural-changing effects for alkali metal cations.
-Through Solvation shell HB (SHB) dynamics, I obtained the HB dynamics for the H-Bonds between water molecules in the ion's 
-first solvation shell and those outside the shell. Similarly, I also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shell. 
-The conclusion is: the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
+Through Solvation shell HB (SHB) dynamics, I obtained the HB dynamics for the H-Bonds between water molecules in and outside the ion's 
+first solvation shell. Similarly, I also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
+We found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
 In contrast, the HB dynamics for the H-bonds between water molecules in the solvation shell and outside the shell are not sensitive to the ions' nature.
 \end{abstract}
 
@@ -456,6 +460,7 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 \textbf{KS} & \textbf{K}ohn-\textbf{S}ham\\
 \textbf{LDA} & \textbf{L}ocal \textbf{D}ensity \textbf{A}pproximation\\
 \textbf{MD} & \textbf{M}olecular \textbf{D}ynamics\\
+\textbf{MLWF} & \textbf{M}aximally-\textbf{L}ocalized \textbf{W}annier \textbf{F}unctions\\
 \textbf{MP2} & \textbf{M}oller-\textbf{P}lesset \textbf{P}erturbation\\
 \textbf{PBE} & \textbf{P}erdew-\textbf{B}urke-\textbf{E}rnzherhof\\
 \textbf{PS} & \textbf{P}hase-\textbf{S}ensitive\\
@@ -475,15 +480,16 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 
 % The \SI{}{} command is provided by the siunitx package, see its documentation for instructions on how to use it
 
-speed of light in vacuum  & $c$ & \SI{299 792 458}{\meter\per\second} (exact)\\
+Avogadro constant & $N_{\text{A}}$ & 6.022 141 995 $\times 10^{23}$ mol \\
 %Constant Name & $Symbol$ & $Constant Value$ with units\\
-Boltzmann constant & $k_{\text{B}}$ & 1.380 650 3(24)$\times 10^{23}$ \si{\joule\per\kelvin} \\
-elementary charge & $e$  & 1.602 176 462(63)$\times 10^{-19}$ C \\
-electron mass & $m_{\text{e}}$ & 9.109 381 88(72) $\times 10^{-31}$ kg \\
-proton mass & $m_{\text{p}}$ & 1.672 621 58(13) $\times 10^{-27}$ kg \\
-Avogadro constant & $N_{\text{A}}$ & 6.022 141 99(47) $\times 10^{23}$ mol \\
-Planck constant & $h$ & 6.626 068 76(52) $\times 10^{-34}$ J s \\
-molar gas constant & $R$ & 8.314 472(15) J mol$^{-1}$ K$^{-1}$
+Boltzmann constant & $k_{\text{B}}$ & 1.380 650 32$\times 10^{23}$ \si{\joule\per\kelvin} \\
+elementary charge & $e$  & 1.602 176 462 6$\times 10^{-19}$ C \\
+electron mass & $m_{\text{e}}$ & 9.109 381 887 $\times 10^{-31}$ kg \\
+molar gas constant & $R$ & 8.314 459 8 J mol$^{-1}$ K$^{-1}$,\\
+proton mass & $m_{\text{p}}$ & 1.672 621 581 $\times 10^{-27}$ kg \\
+Planck constant & $h$ & 6.626 070 15 $\times 10^{-34}$ J s \\
+reduced Planck constant & $\hbar$ & 1.054 571 817 $\times 10^{-34}$ J s\\
+speed of light in vacuum  & $c$ & \SI{299 792 458}{\meter\per\second} (exact)
 \end{constants}
 
 %----------------------------------------------------------------------------------------
@@ -563,6 +569,7 @@ $g_z(\nu)$ & projected VDOS for selected atoms along $z$-axis &  \\
 $g_{\text{A--B}}$ & radial distribution function & \\
 $k$ & rate constant of breaking a HB & \\
 $k'$ & rate constant of reforming a HB & \\
+$r_\text{X}$ & ratio of number of X to the number of H$_2$O among neighbors of a water molecule& \\
 $\theta_{\text{SFG}}$ & reflected angle of SFG beam w.r.t. the normal direction in the medium  & \\ 
 $k(t)$ & reactive flux & \\
 $\tau_{\text{R}}$ & relaxation time of HB population operator correlation function & \\
@@ -588,7 +595,7 @@ $g(\nu)$ & VDOS for selected atoms &  \\
 $z_i$ & valence of species $i$ & \\
 ${\bf v}$ & velocity of an atom & \\
 $C(t)$ & velocity auto-correlation function & \\
-$\nu$ & vibrational frequency & \\
+$\nu$ & vibrational frequency; vibrational quantum number& \\
 \end{symbols}
 
 %----------------------------------------------------------------------------------------
